fix: fixed card dimensions on smaller viewports

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -88,6 +88,11 @@ $green: #1DB954;
           width: 320px;
         }
       }
+      @media only screen and (max-width: 430px) {
+        & {
+          width: auto;
+        }
+      }
     .track-image {
         height: 300px;
         width: 300px;
